Overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,7 @@ table {
 }
 
 thead {
-  @apply z-20 overflow-clip bg-white border-b-2 dark:bg-brand-darker dark:text-white !important;
+  @apply z-20 overflow-clip bg-white border-b-2 dark:border-b-white/10 dark:bg-brand-darker dark:text-white !important;
 }
 
 tbody {
